# MbbcOnC-

./: CMakeLists.txt  alltest.sh  configure.ac  copy.sh
include/: Makefile.am  Makefile.in
include/spatialindex/: Cylinder.h  LERTree.h  LineSegment.h  MBBCk.h  MBC.h  MBCRTree.h  MBRk.h  MVRTree.h  Mbbc.h  MovingPoint.h  MovingRegion.h  PAAR2Tree.h  PAARTree.h  Point.h  R2Tree.h  RTree.h  Region.h  SBBForest.h  SBR.h  SBRTree.h  STPoint.h  ShapeList.h  SpatialIndex.h  TPRTree.h  TimePoint.h  TimeRegion.h  TrajStore.h  Trajectory.h  dtw.h  xCylinder.h  xLine.h  xMBC.h  xMBR.h  xPoint.h  xRTree.h  xSBB.h  xTrajectory.h
include/spatialindex/capi/: sidx_api.h  sidx_impl.h
include/spatialindex/tools/: DiskMultiMap.h  MutablePriorityQueue.h  PointerPool.h  TimeDivision.h  Tools.h
include/storagemanager/: TrajStore.h  tjsql.h  xStore.h  xTrajIdx.h
m4/: libtool.m4
simpletri3d/: CMakeLists.txt
simpletri3d/include/: Distfile.h  Geom.h
simpletri3d/src/: Diskfile.cc  Geom.cc
spatialindex-vc/: spatialindex.vcproj
sqlite/: CMakeLists.txt
src/: CMakeLists.txt
src/capi/: IdVisitor.cc  Index.cc  LeafQuery.cc  ObjVisitor.cc  Utility.cc  sidx_api.cc
src/lertree/: BulkLoader.cc  BulkLoader.h  Index.cc  Index.h  L1Index.cc  L1Index.h  LERTree.cc  LERTree.h  Leaf.cc  Leaf.h  Node.cc  Node.h  PointerPoolNode.h  Statistics.cc  Statistics.h
src/mbcrtree/: BulkLoader.cc  BulkLoader.h  Index.cc  Index.h  Leaf.cc  Leaf.h  MBCRTree.cc  MBCRTree.h  Makefile.am  Makefile.in  Node.cc  Node.h  PointerPoolNode.h  Statistics.cc  Statistics.h  TrajStoreRelated.cc
src/mvrtree/: Index.cc  Index.h  Leaf.cc  Leaf.h  MVRTree.cc  MVRTree.h  Node.cc  Node.h
src/paar2tree/: BulkLoader.cc  BulkLoader.h  Index.cc  Index.h  Leaf.cc  Leaf.h  Node.cc  Node.h  PAAR2Tree.cc  PAAR2Tree.h  PointerPoolNode.h  Statistics.cc  Statistics.h
src/paartree/: BulkLoader.cc  BulkLoader.h  Index.cc  Index.h  Leaf.cc  Leaf.h  Node.cc  Node.h  PAARTree.cc  PAARTree.h  PointerPoolNode.h  Statistics.cc  Statistics.h
src/r2tree/: BulkLoader.cc  BulkLoader.h  Index.cc  Index.h  Leaf.cc  Leaf.h  Node.cc  Node.h  PointerPoolNode.h  R2Tree.cc  R2Tree.h  Statistics.cc  Statistics.h
src/rtree/: BulkLoader.cc  BulkLoader.h  Index.cc  Index.h  Leaf.cc  Leaf.h  Node.cc  Node.h  RTree.cc  RTree.h  Statistics.cc  Statistics.h  TrajStoreRelated.cc
src/sbrtree/: BulkLoader.cc  BulkLoader.h  Index.cc  Index.h  Leaf.cc  Leaf.h  Makefile.am  Makefile.in  Node.cc  Node.h  PointerPoolNode.h  SBRTree.cc  SBRTree.h  Statistics.cc  Statistics.h  TrajStoreRelated.cc
src/spatialindex/: Cylinder.cc  LineSegment.cc  MBBCk.cc  MBBCkT2.cc  MBC.cc  MBRk.cc  Makefile.am  Makefile.in  Mbbc.cc  MovingPoint.cc  MovingRegion.cc  Point.cc  Region.cc  SBR.cc  STPoint.cc  ShapeList.cc  SpatialIndexImpl.cc  TimePoint.cc  TimeRegion.cc  Trajectory.cc  xCylinder.cc  xLine.cc  xMBC.cc  xMBR.cc  xPoint.cc  xSBB.cc  xTrajectory.cc
src/storagemanager/: Buffer.cc  Buffer.h  DiskStorageManager.cc  DiskStorageManager.h  MemoryStorageManager.cc  MemoryStorageManager.h  RandomEvictionsBuffer.cc  TrajStore.cc  TrajStore.h  tjsql.cc  xStore.cc  xStoreDB.cc
src/tools/: TimeDivision.cc  Tools.cc
src/tprtree/: Index.cc  Index.h  Leaf.cc  Leaf.h  Node.cc  Node.h  TPRTree.cc  TPRTree.h
src/xrtree/: BulkLoader.cc  BulkLoader.h  Index.cc  Index.h  IndexBuildHelper.cc  Leaf.cc  Leaf.h  Node.cc  Node.h  PartStore.cc  PartStoreBFMST.cc  PointerPoolNode.h  SBBForest.cc  SBBForest.h  Statistics.cc  Statistics.h  TrajStoreRelated.cc  xRTree.cc  xRTree.h
stxxl/: CMakeLists.txt
stxxl/include/stxxl/bits/containers/btree/: node_cache.h
test/: CMakeLists.txt
test/geometry/: Intersection.cc  Makefile.am  Mbbc.cc  distMeasure.cc
test/mbc/: IndexTest.cc  TrajStoreTest.cc  changeKTest.cc  densityTest.cc  dump.cc  e2eRangeTest.cc  e2eTest.cc  e2eTestGT.cc  enumTest.cc  indexTest.cc  knnTest.cc  leafsize.cc  mbcTest.cc  optimizedTest.cc  radiusEstimator.cc  rangeTest.cc  sbrTest.cc  secondaryTest.cc  simpliTest.cc  speedEstimator.cc  splitQueryTest.cc  splitTest.cc  tb3drTest.cc  testFuncs.h
test/mvrtree/: MVRTreeLoad.cc  MVRTreeQuery.cc
test/paar2tree/: paar2treeTest.cc
test/paartree/: paartreeTest.cc
test/r2tree/: trajLoader.cc
test/rtree/: Exhaustive  Generator  RTreeBulkLoad  RTreeBulkLoad.cc  RTreeLoad  RTreeLoad.cc  RTreeQuery  RTreeQuery.cc
test/sqlite/: sqliteTest.cc
test/testx/: 00.getsubtraj.cc  01.e2eknn.cc  02.e2ennk.cc  03.mixquery.cc  03.precision.cc  04.dense.cc  04.loadleaf.cc  05.btchange.cc  05.range.cc  06.fractal.cc  07.sbbsize.cc  08.estimate.cc  09.mbcknn.cc  10.mbcrange.cc  11.splitMethod.cc  12.sbbdknn.cc  BasicTest.cc  btqtMat.cc  btqtMatDB.cc  bulkloadtest.cc  changek.cc  debug.cc  dump.cc  expandData.cc  fractal.cc  knn-mt.cc  knnCoverageTest.cc  knnTest.cc  longQuery.cc  mbcknn.cc  nnkestimate.cc  odconvert.cc  queryLenVarying.cc  rangeDebug.cc  rangeQuery.cc  regressTest.cc  shuffledata.cc  speedEstimator.cc  splitMethod.cc  storeExplorer.cc  (+2 more)
test/tprtree/: TPRTreeLoad.cc  TPRTreeQuery.cc
