## Makefile.am -- Process this file with automake to produce Makefile.in
noinst_LTLIBRARIES = libMBCRTree.la
INCLUDES = -I../../include 
libMBCRTree_la_SOURCES = BulkLoader.cc Index.cc Leaf.cc Node.cc MBCRTree.cc Statistics.cc BulkLoader.h Index.h Leaf.h Node.h PointerPoolNode.h MBCRTree.h Statistics.h
