## Makefile.am -- Process this file with automake to produce Makefile.in
noinst_LTLIBRARIES = libSBRTree.la
INCLUDES = -I../../include 
libSBRTree_la_SOURCES = BulkLoader.cc Index.cc Leaf.cc Node.cc SBRTree.cc Statistics.cc BulkLoader.h Index.h Leaf.h Node.h PointerPoolNode.h SBRTree.h Statistics.h
